# rust-project-test

./: README.md  package-lock.json  package.json
ccw/: index.html  package-lock.json  package.json  vite.config.js
ccw/src/: App.css  App.jsx  i18n.js  main.jsx
ccw/src-tauri/: Cargo.toml  tauri.conf.json
ccw/src-tauri/src/: main.rs
ccw/src/components/: LanguageModal.jsx  ThemeToggle.jsx
ccw/src/locales/en/: translation.json
ccw/src/locales/es/: translation.json
ccw/src/locales/fr/: translation.json
ccw/src/locales/ru/: translation.json
ccw/src/locales/zh/: translation.json
ccw/src/pages/login/: Login.jsx
ccw/src/pages/main/: Home.jsx
