[package]
name = "ccw"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "ccw_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bip39 = "1.1.1"
ethers = "1.0"
k256 = { version = "0.11", features = ["ecdsa"] }
rand = "0.8"
tokio = { version = "1", features = ["full"] }
